--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,15 @@ langdetect==1.0.7
 language_data==1.3.0
 nltk==3.9.1
 numpy==1.26.1
+pyarrow==18.1.0
+openpyxl==3.1.5
 plotly==6.2.0
 prophet==1.1.6
 scikit-learn==1.6.1
 scipy==1.11.3
 seaborn==0.13.0
 spacy==3.8.3
+spacy-langdetect==0.1.2
 statsmodels==0.14.4
 tzdata==2023.3
 uk_core_news_trf @ https://github.com/explosion/spacy-models/releases/download/uk_core_news_trf-3.8.0/uk_core_news_trf-3.8.0-py3-none-any.whl
