--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ emoji==2.14.1
 langcodes==3.5.0
 langdetect==1.0.7
 language_data==1.3.0
+cmdstanpy==1.2.5
 nltk==3.9.1
 numpy==1.26.1
 pyarrow==18.1.0
@@ -15,9 +16,11 @@ openpyxl==3.1.5
 plotly==6.2.0
 prophet==1.1.6
 scikit-learn==1.6.1
+scikit-optimize==0.10.2
 scipy==1.11.3
 seaborn==0.13.0
 spacy==3.8.3
+gensim==4.3.3
 spacy-langdetect==0.1.2
 statsmodels==0.14.4
 tzdata==2023.3
